--- a/html/Index.html
+++ b/html/Index.html
@@ -20,7 +20,7 @@
                 <label>Contraseña:</label><br>
                 <input type="password" placeholder="Contraseña"><br>
 
-                <button><a href="webPanel.html">INICIAR SESION</a></button>
+                <button><a href="template.html">INICIAR SESION</a></button>
             </div>
         </div>
     </div>
